fix: Fixed the code block styling in dark mode

--- a/static_content/assets/sass/_variables.scss
+++ b/static_content/assets/sass/_variables.scss
@@ -57,6 +57,7 @@ $dark-mode-gray-light: #e8e8e8;
 $dark-mode-gray-lighter: #f5f5f5;
 $dark-mode-canvas-color: #2f2f2f;
 $dark-mode-border-color: #414141;
+$dark-mode-code-block-fg: #c5c8c6;
 
 $dark-mode-green: #295234;
 $dark-mode-dark-green: darken($dark-mode-green, 5);
